# sipper

./: .gitignore  README.md  setup.cfg
src/sipper/: __init__.py  __main__.py  getopt.py
src/sipper/driver/: __init__.py  avs84.py  csv.py  excel.py
