[metadata]
name = sipper
version = 0.0.5
author = Maxim Kasyanenko
description = The FFMPEG for proprietary data file formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mxi/sipper
project_urls =
    Bug Tracker = https://github.com/mxi/sipper/issues
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas>=1.2.0
    xlrd>=1.0.0
    openpyxl>=3.0.0

[options.packages.find]
where = src